# PlenopticImageGenerator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  changes.md  cmake_install.cmake  main.cpp
config/: pig_default.json
datasets/multi_view/: camera_1.exr  camera_2.exr  camera_3.exr  camera_calibration.json  multi_view.json
datasets/single_view/: ball.exr  ball.json  bonsai.exr  bonsai.json  rings.exr  rings.json
include/data/: CameraCalibration.hpp  Config.hpp  DatasetParameters.hpp  MultiViewDatasetLoader.hpp  PipelineData.hpp  PointCloud.hpp  PointCloudTransform.hpp  SystemSpec.hpp
include/gpu/: GPUConstants.cuh  GPUContext.cuh  GPUInterface.cuh  GPUKernels.cuh  GPUMemory.cuh  GPUPointCloud.cuh  GPUTypes.cuh  GPUUtils.cuh  MultiViewRegistration.cuh  PointCloudGenerationGPU.cuh  PostProcessingGPU.cuh  PreProcessingGPU.cuh
include/pipeline/: Pipeline.hpp  PipelineBenchmark.hpp  PipelineDataLoader.hpp  PipelineGPU.hpp  PipelineMultiViewGPU.hpp  PipelineStage.hpp
include/pipeline/stages/: MultiViewPointCloud.hpp  MultiViewRegistration.hpp  PlenopticRendering.hpp  PointCloudGeneration.hpp  PointCloudGenerationGPU.hpp  PostProcessing.hpp  PostProcessingGPU.hpp  PreProcessing.hpp  PreProcessingGPU.hpp
include/utils/: JSONUtils.hpp  OutputColors.hpp  PrintUtils.hpp  TransformUtils.hpp  types.hpp
specifications/: prototype_spec.json
src/: CameraCalibration.cpp
src/gpu/: GPUConstants.cu  GPUPointCloud.cu  GPUUtils.cu  MultiViewRegistration.cu  PointCloudGenerationGPU.cu  PostProcessingGPU.cu  PreProcessingGPU.cu  RenderingKernel.cu  RenderingLauncher.cu
src/pipeline/: Pipeline.cpp  PipelineBenchmark.cpp  PipelineDataLoader.cpp  PipelineGPU.cpp  PipelineMultiViewGPU.cpp
src/pipeline/stages/: MultiViewPointCloud.cpp  MultiViewRegistration.cpp  PlenopticRendering.cpp  PointCloudGeneration.cpp  PointCloudGenerationGPU.cpp  PostProcessing.cpp  PostProcessingGPU.cpp  PreProcessing.cpp  PreProcessingGPU.cpp
